[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leep"
version = "1.0.0"
dependencies = [
    "cothread",
    "numpy",
    "matplotlib"
]
authors = [
  { name="Michael Davidsaver", email="mdavidsaver@gmail.com" },
]
description = "Library to communicate with LBL procotcol"
readme = "README.md"
license = {file = "LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/leep tests}"

[tool.coverage.run]
source_pkgs = ["leep", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
leep = ["src/leep", "*/leep/src/leep"]
tests = ["tests", "*/leep/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
